--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="rating" content="General">
     <meta http-equiv="content-language" content="en">
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-    <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/4/47/PNG_transparency_demonstration_1.png" type="image/x-icon">
+    <link rel="icon" href="https://raw.githubusercontent.com/32ks/32ks/main/icon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <style type="text/css">
