--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
 <head>
-    <title>Welcome to 32k.xyz</title>
+    <title>"Welcome to 32.xyz"
+    </title>
     <meta name="TITLE" content="32k.xyz Minecraft Server">
     <meta name="DESCRIPTION" content="Join the 32k.xyz Minecraft Server for an unforgettable experience with console to PC crossplay, custom weapons, Towny, clans, economy, and more!">
-    <meta name="KEYWORDS" content="Minecraft, server, 32k.xyz, crossplay, custom weapons, guns, Towny, clans, economy, Brewery, MCMMO, 1.7, 1.8, 1.9, 1.10, 1.11, 1.12, 1.13, 1.14, 1.15, 1.16, 1.17, 1.18, 1.19, 1.20, 1.21">
+    <meta name="KEYWORDS" content="Minecraft, server, 32k.xyz, crossplay, bedrock java crossplay, guns, Towny, clans, GeyserMC, economy, Brewery, MCMMO, Minecraft 1.7–1.21, 1.7, 1.8, 1.9, 1.10, 1.11, 1.12, 1.13, 1.14, 1.15, 1.16, 1.17, 1.18, 1.19, 1.20, 1.21">
     <meta name="rating" content="General">
     <meta http-equiv="content-language" content="en">
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
