--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>"Welcome to 32.xyz"
+    <title>"Welcome to 32k.xyz"
     </title>
     <meta name="TITLE" content="32k.xyz Minecraft Server">
     <meta name="DESCRIPTION" content="Join the 32k.xyz Minecraft Server for an unforgettable experience with console to PC crossplay, custom weapons, Towny, clans, economy, and more!">
