--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             margin: 0;
             font-family: "Courier", monospace;
             color: #FFC84E;
-            background: url('https://github.com/32ks/32ks/blob/main/background.jpg?raw=true) repeat;
+            background: url('https://github.com/32ks/32ks/blob/main/background.jpg?raw=true') repeat;
             background-color: #0C0011; 
             overflow-x: hidden;
             position: relative;
