--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="32k.xyz">
     <meta name="robots" content="index, follow">
     <meta property="og:title" content="32k.xyz Minecraft Server">
-    <meta property="og:description" content="Join the 32k.xyz Minecraft Server for a unique experience with crossplay, custom weapons, and more!">
+    <meta property="og:description" content="Join the 32k.xyz Minecraft Server for a unique SMP experience with crossplay, custom weapons, mcMMO, and more!">
     <meta property="og:image" content="https://raw.githubusercontent.com/32ks/32ks/main/icon.ico">
     <meta property="og:url" content="https://32k.xyz">
     <meta name="twitter:title" content="32k.xyz Minecraft Server">
