--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Join 32k.xyz Minecraft Server for crossplay, custom weapons, guns, economy, Towny, and more! Play on PC, Console, and Bedrock.">
-    <meta name="keywords" content="Minecraft, server, 32k.xyz, crossplay, PC, Console, Bedrock, custom weapons, guns, economy, Towny, clans, MCMMO, voting">
+    <meta name="description" content="Join 32k.xyz Minecraft Server with Crossplay, SMP, Creative plots, Custom weapons, guns, economy, Towny, and more! Play on PC, Console, and Bedrock.">
+    <meta name="keywords" content="Minecraft, server, 32k.xyz, crossplay, PC, Console, Bedrock, custom weapons, guns, economy, Towny, clans, MCMMO, Creative, Plots, voting">
     <meta name="author" content="32k.xyz">
     <meta name="robots" content="index, follow">
     <meta property="og:title" content="32k.xyz Minecraft Server">
-    <meta property="og:description" content="Join the 32k.xyz Minecraft Server for a unique SMP experience with crossplay, custom weapons, mcMMO, and more!">
+    <meta property="og:description" content="Join the 32k.xyz Minecraft Server for a unique SMP experience with crossplay, Creative plots, custom weapons, mcMMO, and more!">
     <meta property="og:image" content="https://raw.githubusercontent.com/32ks/32ks/main/icon.ico">
     <meta property="og:url" content="https://32k.xyz">
     <meta name="twitter:title" content="32k.xyz Minecraft Server">
-    <meta name="twitter:description" content="Join the 32k.xyz Minecraft Server with custom features like crossplay, Towny, and more.">
+    <meta name="twitter:description" content="Join the 32k.xyz Minecraft Server for a unique SMP experience with crossplay, custom weapons, mcMMO, and more!">
     <meta name="twitter:image" content="https://raw.githubusercontent.com/32ks/32ks/main/icon.ico">
     <meta name="twitter:card" content="summary_large_image">
     <title>32k.xyz - Minecraft Server</title>
@@ -196,7 +196,7 @@
 
     <div id="server-status">
         <div class="status-text">
-            <img id="status-icon" src="https://via.placeholder.com/18/00FF00/000000?text=+" alt="Status">
+            <img id="status-icon" src="https://upload.wikimedia.org/wikipedia/commons/a/ad/YouTube_loading_symbol_3_%28transparent%29.gif" alt="Status">
             <span id="status-text">Loading Server Status...</span>
             <span id="player-count" style="margin-left: 20px;">Players: 0</span>
         </div>
@@ -228,11 +228,11 @@
 
                     if (data.online) {
                         statusText.textContent = 'Server is Online';
-                        statusIcon.src = 'https://via.placeholder.com/18/00FF00/000000?text=+'; 
+                        statusIcon.src = 'https://www.nicepng.com/png/full/244-2444375_dot-icon-png.png'; 
                         playerCount.textContent = `Players: ${data.players.now}`;
                     } else {
                         statusText.textContent = 'Server is Offline';
-                        statusIcon.src = 'https://via.placeholder.com/18/FF0000/000000?text=-'; 
+                        statusIcon.src = 'https://www.nicepng.com/png/full/0-7140_dot-png-button-icon-red.png'; 
                         playerCount.textContent = `Players: 0`;
                     }
                 })
@@ -256,17 +256,22 @@
             <h1>Welcome to 32k.xyz</h1>
             <div class="section-title">Why Join?</div>
             <div class="features">
-                <p class="feature-item">✔️ Crossplay on PC, Console, and Bedrock.</p>
-                <p class="feature-item">✔️ Custom weapons and guns for intense PvP.</p>
-                <p class="feature-item">✔️ Towny system for city-building enthusiasts.</p>
-                <p class="feature-item">✔️ Economy to trade, buy, sell, and auction.</p>
-                <p class="feature-item">✔️ Clans plugin for competitive gameplay.</p>
-                <p class="feature-item">✔️ MCMMO skills and abilities for progression.</p>
-                <p class="feature-item">✔️ Play across Minecraft versions 1.7 to 1.21.</p>
-                <p class="feature-item">✔️ 24/7 uptime and a dedicated community.</p>
-            </div>
+                    ✔️ Creative Plot Gamemode
+                    <span style="color: gold; font-weight: bold; font-size: 1.5rem; margin-left: 15px; text-shadow: 0 0 10px gold, 0 0 20px rgba(255, 223, 0, 0.8);">
+                        NEW
+                    </span>
+                    <p class="feature-item">✔️ Crossplay on PC, Console, and all Minecraft Bedrock compatible devices.</p>
+                    <p class="feature-item">✔️ Custom weapons and guns for intense PvP.</p>
+                    <p class="feature-item">✔️ Treefeller plugin, /hub, /home, /tpa, /claim (anti-grief protection), and other SMP essentials.</p>
+                    <p class="feature-item">✔️ Towny plugin: Create nations, engage in wars, and more.</p>    
+                    <p class="feature-item">✔️ Economy system to trade, buy, sell, and auction items.</p>
+                    <p class="feature-item">✔️ Clans/Factions plugin for competitive gameplay.</p>
+                    <p class="feature-item">✔️ MCMMO and various RPG elements.</p>
+                    <p class="feature-item">✔️ Play across Minecraft versions 1.7 to 1.21.</p>
+                    <p class="feature-item">✔️ 24/7 uptime and a dedicated community.</p>
+                    
         </div>
-
+    </div>
         <div>
             <div class="section-title">How to Join</div>
             <div class="how-to-join">
