--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
             <h1>Welcome to 32k.xyz</h1>
             <div class="section-title">Why Join?</div>
             <div class="features">
-                    ✔️ Creative Plot Gamemode
+                    ✔️ Creative Plots Gamemode
                     <span style="color: gold; font-weight: bold; font-size: 1.5rem; margin-left: 15px; text-shadow: 0 0 10px gold, 0 0 20px rgba(255, 223, 0, 0.8);">
                         NEW
                     </span>
