--- a/index.html
+++ b/index.html
@@ -2,22 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Join 32k.xyz Minecraft Server with Crossplay, SMP, Creative plots, Custom weapons, guns, economy, Towny, and more! Play on PC, Console, and Bedrock.">
-    <meta name="keywords" content="Minecraft, server, 32k.xyz, crossplay, PC, Console, Bedrock, custom weapons, guns, economy, Towny, clans, MCMMO, Creative, Plots, voting">
-    <meta name="author" content="32k.xyz">
+
+    <title>32k.xyz - Crossplay Minecraft Server | 32k Network</title>
+
+    <meta name="description" content="Looking for a fun Minecraft server? 32k Network (32k.xyz) offers crossplay for Java and Bedrock, with creative plots, survival, Towny, guns, custom weapons, and more. Come hang out!">
+    <meta name="keywords" content="32k.xyz, 32k Network, Minecraft server, Minecraft crossplay, Java Bedrock server, creative plots, SMP, Towny, economy, guns, custom weapons, Minecraft clans, survival, Minecraft factions">
+    <meta name="author" content="32k Network">
     <meta name="robots" content="index, follow">
-    <meta property="og:title" content="32k.xyz Minecraft Server">
-    <meta property="og:description" content="Join the 32k.xyz Minecraft Server for a unique SMP experience with crossplay, Creative plots, custom weapons, mcMMO, and more!">
+    <link rel="canonical" href="https://32k.xyz" />
+
+
+    <meta property="og:title" content="Play Minecraft on 32k.xyz - Crossplay, Creative & Survival | 32k Network">
+    <meta property="og:description" content="Join the 32k Network at 32k.xyz—play with friends on Java, Bedrock, or even console!  Towny, Creative plots, custom gear, and an active player base.">
     <meta property="og:image" content="https://raw.githubusercontent.com/32ks/32ks/main/icon.ico">
     <meta property="og:url" content="https://32k.xyz">
-    <meta name="twitter:title" content="32k.xyz Minecraft Server">
-    <meta name="twitter:description" content="Join the 32k.xyz Minecraft Server for a unique SMP experience with crossplay, custom weapons, mcMMO, and more!">
-    <meta name="twitter:image" content="https://raw.githubusercontent.com/32ks/32ks/main/icon.ico">
+    <meta property="og:type" content="website">
+
+ 
     <meta name="twitter:card" content="summary_large_image">
-    <title>32k.xyz - Minecraft Server</title>
+    <meta name="twitter:title" content="32k.xyz Minecraft Server - Crossplay & Creative Fun | 32k Network">
+    <meta name="twitter:description" content="Join the 32k Network and experience Minecraft SMP like never before. Crossplay, custom guns, economy, and more across Java and Bedrock.">
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/32ks/32ks/main/icon.ico">
+
+  
     <link rel="icon" href="https://raw.githubusercontent.com/32ks/32ks/main/icon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Doto&display=swap" rel="stylesheet">
+</head>
     <style>
       
         body {
