--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <title>32k.xyz - Crossplay Minecraft Server | 32k Network</title>
 
-    <meta name="description" content="Looking for a fun Minecraft server? 32k Network (32k.xyz) offers crossplay for Java and Bedrock, with creative plots, survival, Towny, guns, custom weapons, and more. Come hang out!">
+    <meta name="description" content="Looking for a fun Minecraft server? 32k Network (32k.xyz) offers crossplay for Java and Bedrock, with creative plots, survival, Towny, guns, custom weapons, and more. ">
     <meta name="keywords" content="32k.xyz, 32k Network, Minecraft server, Minecraft crossplay, Java Bedrock server, creative plots, SMP, Towny, economy, guns, custom weapons, Minecraft clans, survival, Minecraft factions">
     <meta name="author" content="32k Network">
     <meta name="robots" content="index, follow">
